# SimpleCRC

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  crc_bit.c  main.c  vcpkg.json
.github/workflows/: cmake_build.yml  release_gen.yml
cmake/: tools.cmake
include/: simplecrc.h
include/internal/: crc_utility.h  utility.h
include/simplecrc/: reference.h
reference_impls/: .clang-format  crc_24q.c
scripts/: rv-match-invoke.sh
src/: core.c  crc_bit.c  crc_combine.c  crc_utility.c  main.c  utility.c
test/: CMakeLists.txt  crc_db.txt  test_init.py
test/src/: PerfTest.cpp  basic_24q.c  basic_autosar_32.c  basic_can_fd.c  basic_cdma_2000.c  basic_darc.c  basic_dect_12.c  basic_go_iso.c  basic_gsm_40.c  basic_ibm_3740.c  basic_iso_14443.c  basic_kermit.c  basic_maxim_dow.c  basic_test.c  basic_usb_16.c  bit_test.c  combine_basic_test.c  db_test.c  exhaustive_autosar32.c  exhaustive_cdma2000_8.c  exhaustive_dect_12.c  exhaustive_go_iso.c  exhaustive_gsm40.c  exhaustive_ibm3740.c  exhaustive_kermit.c  exhaustive_lte_a.c  fuzzer_test.c  test.c
test/src/utility/: algo_test_utils.h
